@@ -7,7 +7,6 @@ import io.github.aggie.products.ProductType;
 import lombok.extern.java.Log;
 import org.springframework.context.annotation.AnnotationConfigApplicationContext;
 
-import java.util.Collections;
 import java.util.List;
 
 @Log
@@ -36,7 +35,7 @@ public class Application {
             shopService.addProduct(BOOK_PRODUCT);
             log.info(shopService.getProducts(0, 100).toString());
 
-            var order = new Order(Collections.emptyList());
+            var order = new Order(List.of(VIDEO_PRODUCT, BOOK_PRODUCT));
             shopService.placeOrder(order);
             var payment = shopService.payForOrder(order.getId());
             log.info(payment.getId());
